HL.java
/* HL.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. HL.java */
public class HL/*@bgen(jjtree)*/implements HLTreeConstants, HLConstants {/*@bgen(jjtree)*/
  protected static JJTHLState jjtree = new JJTHLState();

// ===========================================================================
//                                 P A R S E R   
// ===========================================================================

//------------------------    STATEMENTS AND EXPRESSIONS -----------------------
  static final public 
SimpleNode start() throws ParseException {
    expression();
    jj_consume_token(SEMICOL);
{if ("" != null) return (SimpleNode) (jjtree.popNode());}
    throw new Error("Missing return statement in function");
  }

  static final public void S() throws ParseException {/*@bgen(jjtree) S */
  ASTS jjtn000 = new ASTS(JJTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FOR:
      case IF:
      case INT:
      case LIST:
      case PRINT:
      case STR:
      case 69:{
        common_statement();
        jj_consume_token(SEMICOL);
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        if (jj_2_1(2147483647)) {
          assignment();
          jj_consume_token(SEMICOL);
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ADD:
          case LSQUARE:
          case LPAREN:
          case SUB:
          case INTEGER:
          case IDENTIFIER:
          case STRING:{
            expression();
            jj_consume_token(SEMICOL);
            break;
            }
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FOR:
    case IF:
    case INT:
    case LIST:
    case PRINT:
    case STR:
    case 69:{
      common_statement();
      break;
      }
    case RETURN:{
      return_stat();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      if (jj_2_2(2)) {
        fn_call();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          assignment();
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

// common_statement is a statement that can be integrated into any list of 
// possible statements without worrying that additional lookaheads will be needed.
// It excludes return_stat because these are not needed at the top level
// and assignments and function calls because they require additional lookaheads to 
// be properly detected.
// 
  static final public void common_statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IF:{
      if_stat();
      break;
      }
    case FOR:{
      for_stat();
      break;
      }
    case 69:{
      while_stat();
      break;
      }
    case PRINT:{
      print_stat();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      if (jj_2_3(2)) {
        simple_decl();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case LIST:
        case STR:{
          fn_decl();
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void body() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FOR:
      case IF:
      case INT:
      case LIST:
      case PRINT:
      case RETURN:
      case STR:
      case IDENTIFIER:
      case 69:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_1;
      }
      statement();
      jj_consume_token(SEMICOL);
    }
  }

  static final public void clause() throws ParseException {
    label_2:
    while (true) {
      statement();
      jj_consume_token(SEMICOL);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FOR:
      case IF:
      case INT:
      case LIST:
      case PRINT:
      case RETURN:
      case STR:
      case IDENTIFIER:
      case 69:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_2;
      }
    }
  }

//---------------------------   DECLARATIONS ----------------------------------
  static final public 
void simple_decl() throws ParseException {
    type();
    ident_list();
  }

  static final public void type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
      break;
      }
    case STR:{
      jj_consume_token(STR);
      break;
      }
    case LIST:{
      jj_consume_token(LIST);
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ident_list() throws ParseException {
    jj_consume_token(IDENTIFIER);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      jj_consume_token(IDENTIFIER);
    }
  }

  static final public void fn_decl() throws ParseException {
    type();
    jj_consume_token(FUN);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LPAREN);
    param_decls();
    jj_consume_token(RPAREN);
    body();
    jj_consume_token(NUF);
  }

  static final public void param_decls() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case LIST:
    case STR:{
      param_decl();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        param_decl();
      }
      break;
      }
    default:
      jj_la1[11] = jj_gen;

    }
  }

  static final public void param_decl() throws ParseException {
    type();
    jj_consume_token(IDENTIFIER);
  }

//---------------------------   IF AND LOOP STATEMENTS  ----------------------------------
  static final public 
void if_stat() throws ParseException {
    jj_consume_token(IF);
    condition();
    jj_consume_token(THEN);
    clause();
    elifs();
    else_clause();
    jj_consume_token(FI);
  }

  static final public void elifs() throws ParseException {
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELIF:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      jj_consume_token(ELIF);
      condition();
      jj_consume_token(THEN);
      clause();
    }
  }

  static final public void else_clause() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      clause();
      break;
      }
    default:
      jj_la1[13] = jj_gen;

    }
  }

  static final public void for_stat() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(IN);
    expression();
    jj_consume_token(DO);
    body();
    jj_consume_token(OD);
  }

  static final public void while_stat() throws ParseException {/*@bgen(jjtree) while_stat */
  ASTwhile_stat jjtn000 = new ASTwhile_stat(JJTWHILE_STAT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(69);
      comparison();
      Do();
      body();
      Od();
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

//---------------------------    ASSIGNMENTS, INDEXING, AND FUNCTION CALLS -----------------
  static final public 
void assignment() throws ParseException {
    jj_consume_token(IDENTIFIER);
    indexed();
    jj_consume_token(ASSIGN);
    expression();
  }

  static final public void indexed() throws ParseException {
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DOT:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_6;
      }
      jj_consume_token(DOT);
      unindexedterm();
      last_index();
    }
  }

  static final public void last_index() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COL:{
      jj_consume_token(COL);
      unindexedterm();
      break;
      }
    default:
      jj_la1[15] = jj_gen;

    }
  }

  static final public void fn_call() throws ParseException {
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LPAREN);
    parameters();
    jj_consume_token(RPAREN);
  }

  static final public void parameters() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ADD:
    case LSQUARE:
    case LPAREN:
    case SUB:
    case INTEGER:
    case IDENTIFIER:
    case STRING:{
      expression();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[16] = jj_gen;
          break label_7;
        }
        jj_consume_token(COMMA);
        expression();
      }
      break;
      }
    default:
      jj_la1[17] = jj_gen;

    }
  }

//---------------------------   OTHER STATEMENTS   -------------------------------------------
  static final public 
void print_stat() throws ParseException {
    jj_consume_token(PRINT);
    expression();
  }

  static final public void return_stat() throws ParseException {
    jj_consume_token(RETURN);
    expression();
  }

//---------------------------   CONDITIONS ---------------------------------------------------
  static final public 
void condition() throws ParseException {
    and_clause();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_8;
      }
      jj_consume_token(OR);
      and_clause();
    }
  }

  static final public void and_clause() throws ParseException {
    not_clause();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_9;
      }
      jj_consume_token(AND);
      not_clause();
    }
  }

  static final public void not_clause() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      jj_consume_token(NOT);
      not_clause();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      if (jj_2_4(2147483647)) {
        comparison();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LPAREN:{
          jj_consume_token(LPAREN);
          condition();
          jj_consume_token(RPAREN);
          break;
          }
        default:
          jj_la1[21] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void comparison() throws ParseException {
    expression();
    comparator();
    expression();
  }

  static final public void comparator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LT:{
      jj_consume_token(LT);
      break;
      }
    case LE:{
      jj_consume_token(LE);
      break;
      }
    case GT:{
      jj_consume_token(GT);
      break;
      }
    case GE:{
      jj_consume_token(GE);
      break;
      }
    case NE:{
      jj_consume_token(NE);
      break;
      }
    case EQ:{
      jj_consume_token(EQ);
      break;
      }
    case IN:{
      jj_consume_token(IN);
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//---------------------------   EXPRESSIONS ------------------------------------------------
  static final public void Identifier() throws ParseException {/*@bgen(jjtree) Identifier */
 ASTIdentifier jjtn000 = new ASTIdentifier(JJTIDENTIFIER);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
jjtn000.jjtSetToken(t);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Integer() throws ParseException {/*@bgen(jjtree) Integer */
 ASTInteger jjtn000 = new ASTInteger(JJTINTEGER);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(INTEGER);
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
jjtn000.jjtSetToken(t);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void String() throws ParseException {/*@bgen(jjtree) String */
 ASTString jjtn000 = new ASTString(JJTSTRING);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(STRING);
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
jjtn000.jjtSetToken(t);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ADD:{
      jj_consume_token(ADD);
      product();
      more_products();
      break;
      }
    case SUB:{
      jj_consume_token(SUB);
      product();
      more_products();
      break;
      }
    case LSQUARE:
    case LPAREN:
    case INTEGER:
    case IDENTIFIER:
    case STRING:{
      product();
      more_products();
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void more_products() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ADD:{
      jj_consume_token(ADD);
      product();
      more_products();
      break;
      }
    case SUB:{
      jj_consume_token(SUB);
      product();
      more_products();
      break;
      }
    default:
      jj_la1[24] = jj_gen;

    }
  }

  static final public void product() throws ParseException {
    term();
    more_terms();
  }

  static final public void more_terms() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PROD:{
      jj_consume_token(PROD);
      term();
      more_terms();
      break;
      }
    case DIV:{
      jj_consume_token(DIV);
      term();
      more_terms();
      break;
      }
    case MOD:{
      jj_consume_token(MOD);
      term();
      more_terms();
      break;
      }
    default:
      jj_la1[25] = jj_gen;

    }
  }

  static final public void term() throws ParseException {
    unindexedterm();
    indexed();
  }

  static final public void unindexedterm() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LPAREN:{
      jj_consume_token(LPAREN);
      expression();
      jj_consume_token(RPAREN);
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      if (jj_2_5(2)) {
        fn_call();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case LSQUARE:
        case INTEGER:
        case IDENTIFIER:
        case STRING:{
          simple_term();
          break;
          }
        default:
          jj_la1[27] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void simple_term() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      Identifier();
      break;
      }
    case INTEGER:{
      Integer();
      break;
      }
    case STRING:{
      String();
      break;
      }
    case LSQUARE:{
      list();
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void list() throws ParseException {/*@bgen(jjtree) list */
  ASTlist jjtn000 = new ASTlist(JJTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LSQUARE);
      list_elements();
      jj_consume_token(RSQUARE);
    } catch (Throwable jjte000) {
if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void LST() throws ParseException {/*@bgen(jjtree) LST */
 ASTLST jjtn000 = new ASTLST(JJTLST);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        t = jj_consume_token(IDENTIFIER);
        break;
        }
      case INTEGER:{
        t = jj_consume_token(INTEGER);
        break;
        }
      case STRING:{
        t = jj_consume_token(STRING);
ASTlist jjtn001 = new ASTlist(JJTLIST);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
        try {
jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
    jjtc001 = false;
jjtn001.jjtSetToken(t);
        } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
    }
        }
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void list_elements() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ADD:
    case LSQUARE:
    case LPAREN:
    case SUB:
    case INTEGER:
    case IDENTIFIER:
    case STRING:{
      expression();
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[30] = jj_gen;
          break label_10;
        }
        jj_consume_token(COMMA);
        expression();
      }
      break;
      }
    default:
      jj_la1[31] = jj_gen;

    }
  }

  static final public void altComp() throws ParseException {
ASTcomparison jjtn001 = new ASTcomparison(JJTCOMPARISON);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
    try {
      expression();
      label_11:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case EQ:
        case GE:
        case GT:
        case LE:
        case LT:
        case NE:
        case IN:{
          ;
          break;
          }
        default:
          jj_la1[32] = jj_gen;
          break label_11;
        }
        comparator();
      }
    } catch (Throwable jjte001) {
if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
    }
    }
  }

  static final public void EQ() throws ParseException {/*@bgen(jjtree) EQ */
  ASTEQ jjtn000 = new ASTEQ(JJTEQ);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(EQ);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Do() throws ParseException {/*@bgen(jjtree) Do */
  ASTDo jjtn000 = new ASTDo(JJTDO);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DO);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Elif() throws ParseException {/*@bgen(jjtree) Elif */
  ASTElif jjtn000 = new ASTElif(JJTELIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ELIF);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Else() throws ParseException {/*@bgen(jjtree) Else */
  ASTElse jjtn000 = new ASTElse(JJTELSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ELSE);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Fi() throws ParseException {/*@bgen(jjtree) Fi */
  ASTFi jjtn000 = new ASTFi(JJTFI);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FI);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void For() throws ParseException {/*@bgen(jjtree) For */
  ASTFor jjtn000 = new ASTFor(JJTFOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FOR);
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
